# course_paper_3

./: README.md  pyproject.toml
cw3/: executed_operations.py  format_date.py  message.py
tests/: test_executed_operations.py  test_format_date.py  test_hidden_number.py  test_message.py
