[tool.poetry]
name = "course-paper-3"
version = "0.1.0"
description = ""
authors = ["tugulkhanov <mtugulkhanov@mail.ru>"]
readme = "README.md"
packages = [{include = "course_paper_3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.1.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
